Add modified react-native-fs package

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-native": "0.73.6",
     "react-native-background-fetch": "^4.2.5",
     "react-native-fast-image": "^8.6.3",
-    "react-native-fs": "file:../react-native-fs/react-native-fs-2.20.0.tgz",
+    "react-native-fs": "file:./react-native-fs-2.20.0.tgz",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-reanimated": "^3.8.1",
